force-app/main/default/objects/Field_Visibility_Config__c/Field_Visibility_Config__c.object-meta.xml
<CustomObject>
    <label>Field Visibility Configuration</label>
    <nameField>
        <displayFormat>FVC-{0000}</displayFormat>
        <label>Configuration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Visibility Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>