force-app/main/default/objects/Field_Visibility_Config__c/fields/Show_Compliance_Categorization__c.field-meta.xml
<CustomField>
    <fullName>Show_Compliance_Categorization__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Compliance Categorization</label>
    <type>Checkbox</type>
</CustomField>