force-app/main/default/objects/Field_Visibility_Config__c/fields/Show_Data_Owner__c.field-meta.xml
<CustomField>
    <fullName>Show_Data_Owner__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Data Owner</label>
    <type>Checkbox</type>
</CustomField>