force-app/main/default/objects/Field_Visibility_Config__c/fields/Show_Description__c.field-meta.xml
<CustomField>
    <fullName>Show_Description__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Description</label>
    <type>Checkbox</type>
</CustomField>