force-app/main/default/objects/Field_Visibility_Config__c/fields/Show_Field_Usage__c.field-meta.xml
<CustomField>
    <fullName>Show_Field_Usage__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Field Usage</label>
    <type>Checkbox</type>
</CustomField>