force-app/main/default/objects/Field_Visibility_Config__c/fields/Target_ID__c.field-meta.xml
<CustomField>
    <fullName>Target_ID__c</fullName>
    <label>Target ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>