force-app/main/default/objects/Field_Visibility_Config__c/fields/Target_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Name__c</fullName>
    <label>Target Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>