force-app/main/default/objects/Field_Visibility_Config__c/fields/Target_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Type__c</fullName>
    <label>Target Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>PermissionSet</fullName>
                <label>Permission Set</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>